tests/ui/traits/const-traits/specialization/const-default-const-specialized.stderr
error[E0015]: cannot call non-const fn `<T as Value>::value` in constant functions
  --> $DIR/const-default-const-specialized.rs:16:5
   |
LL |     T::value()
   |     ^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: add `#![feature(effects)]` to the crate attributes to enable
   |
LL + #![feature(effects)]
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
